--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "license": "MIT",
   "author": "",
   "directories": {
-    "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
@@ -36,9 +34,13 @@
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.16.0",
     "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3"
+    "emberfire": "^2.0.8",
+    "loader.js": "^4.2.3",
+    "torii": "^0.9.6"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
-  }
+  },
+  "main": ".eslintrc.js",
+  "dependencies": {}
 }
